# InsureLLM

./: .gitignore  README.md  pyproject.toml
evaluation/: eval.py
pro_implementation/: ingest.py
